--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.9.1",
     "axios": "^1.6.7",
     "lucide-react": "^0.325.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
