--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NEXT_SERVER_URL=http://localhost:3000
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your_secure_random_string
+NEXT_PUBLIC_EXPRESS_URL=http://localhost:3001/api
 PORT=3001
 DATABASE_URL=mysql://root:@localhost:3306/paymefans
 
